fix(TAP-9227): repeated time query interval